<?xml version="1.0"?>
<package format="2">
  <name>youibot_bms</name>
  <version>0.0.0</version>
  <description>The youibot_bms package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bianxu@youibot.com">youibot</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>youibot_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>youibot_serial</build_depend>
  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_mobile_robot</build_depend>
  <build_depend>ecl_converters</build_depend>
  <build_depend>ecl_devices</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>youibot_math_toolkit</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>youibot_msgs</build_export_depend>
  <build_export_depend>youibot_serial</build_export_depend>
  <build_export_depend>youibot_math_toolkit</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>youibot_msgs</exec_depend>
  <exec_depend>youibot_serial</exec_depend>
  <exec_depend>ecl_mobile_robot</exec_depend>
  <exec_depend>ecl_converters</exec_depend>
  <exec_depend>ecl_devices</exec_depend>
  <exec_depend>ecl_geometry</exec_depend>
  <exec_depend>ecl_sigslots</exec_depend>
  <exec_depend>ecl_time</exec_depend>
  <exec_depend>ecl_command_line</exec_depend>
  <exec_depend>youibot_math_toolkit</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins/nodelet_plugin.xml" />
  </export>
</package>
